# edify-server

./: Cargo.toml  README.md  watch-run.ps1  watch-run.sh
src/: main.rs  mod.rs
src/controllers/: auth_controller.rs  course_controller.rs  mod.rs  user_controller.rs
src/db/: db.rs  mod.rs
src/interfaces/: mod.rs  register_request.rs  schema_utilities.rs
src/middleware/: auth_middleware.rs
src/models/: auth.rs  course.rs  mod.rs  students.rs  teachers.rs
src/repository/: course_repository.rs  mod.rs  student_repository.rs  teacher_repository.rs
src/routes/: auth.rs  course.rs  mod.rs  user.rs
src/services/: auth_service.rs
src/utils/: api_response.rs  get_user.rs  jwt.rs  mod.rs
