[package]
name = "edify-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-service = "2.0.2"
dotenv = "0.15.0"
env_logger = "0.11.6"
mongodb = "3.2.1"
serde_json = "1.0.139"
tokio = "1.43.0"
futures-util = "0.3"
